--- a/src/Components/MyRequests.css
+++ b/src/Components/MyRequests.css
@@ -1,25 +1,22 @@
-.card-title{
+.card-title.xyz{
     color: #242487;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
 .card.bg-light.text-dark.x{
-    height: 75%;
+    height: 80%;
     width: 80%;
     margin-top: 20%;
     margin-right:50px;
 }
 
-.list-group-item{
-    font-size: 13px;
-    margin-right:30px;
-    margin-left:30px;
-    border-radius: 0px;
-}
-
-.img-fluid.a{
-    width: 65px;
-    height: 20px;
-    margin-top: -1px;
+.list-group-item.text-left.font-weight-bold.c{
+    font-size: 90%;
+    margin-right:5%;
+    margin-left:5%;
+    border-radius: 0%;
+    margin-bottom: 1%;
 }
