--- a/src/Components/Waiting.css
+++ b/src/Components/Waiting.css
@@ -1,16 +1,19 @@
-.card.bg-light.text-dark.c{
+.card.bg-light.text-dark.abc{
     width: 90%;
     height: 90%;
+
     margin-top: 10%;
+    margin-left: 5%;
 }
 
 .text-center.font-weight-bold{
     color: #242487;
+    margin-bottom: 15%;
 }
 .img-fluid.z{
-    height: 25%;
+    height: 28%;
     width: 16%;
-    margin-top: 20%;
+    margin-top: 15%;
     margin-left: 42%;
     margin-bottom: 3%;
 }
