Add_payment_fixed

--- a/src/Components/Request_Completed.css
+++ b/src/Components/Request_Completed.css
@@ -10,6 +10,11 @@
     margin-left: 8%;
 }
 
+.form-control_N{
+    width: 100%;
+
+}
+
 .btn.btn-primary.c{
     background-color: #242487;
     border-color: #242487;
