--- a/src/Components/MyRequests.css
+++ b/src/Components/MyRequests.css
@@ -4,10 +4,11 @@
     margin-bottom: 5%;
     margin-left: 30%;
     margin-right: 30%;
+    align-content: center;
 }
 
 .card.bg-light.text-dark.x{
-    height: 80%;
+    height: 90%;
     width: 80%;
     margin-top: 20%;
     margin-right:50px;
