Add Worker Image Fixed

--- a/src/Components/add_worker.css
+++ b/src/Components/add_worker.css
@@ -28,6 +28,14 @@
   margin-left: 30%;
   padding: 30px 0;
 }
+
+.NewClass79{
+  margin-left: 35%;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 32%;
+}
+
 .addworker-form h2 {
   color: #242487;
   margin: 0 0 15px;
