--- a/src/Components/WorkersMain.css
+++ b/src/Components/WorkersMain.css
@@ -15,16 +15,17 @@ h2{
   background-color: #f7f6fd;
 }
 .button_workers {
+  cursor: pointer;
   background-color: #242487;
   border-radius: 3px;
   display: block;
   margin-left: 5%;
-  width: 20%;
+  width: 15%;
   border: none;
   color: white;
   padding: 10px 32px;
   text-align: center;
-  text-decoration: none;
+  /* text-decoration: none; */
   /* display: inline-block; */
   font-size: 18px;
   font: Segoe ui;
